tests/snapshots/check_corpus__snapshot_check_corpus@generic-eq.i.snap
---
source: tests/check_corpus.rs
expression: "i_lang::check::types::render_typing(&typing, &res)"
input_file: tests/corpus/check/generic-eq.i
---
schemes:
  bothEq : forall t2 . Eq t2 => t2, t2 -> Bool
