tests/snapshots/check_corpus__snapshot_check_corpus@identity.i.snap
---
source: tests/check_corpus.rs
expression: "i_lang::check::types::render_typing(&typing, &res)"
input_file: tests/corpus/check/identity.i
---
schemes:
  id : forall t1 . t1 -> t1
