tests/snapshots/check_corpus__snapshot_check_corpus@lambda-app.i.snap
---
source: tests/check_corpus.rs
expression: "format!(\"{}\", typing)"
input_file: tests/corpus/check/lambda-app.i
---
schemes:
  #0 : forall t1 . t1 -> t1
  #1 : Int
