tests/snapshots/check_corpus__snapshot_check_corpus@method-self.i.snap
---
source: tests/check_corpus.rs
expression: "format!(\"{}\", typing)"
input_file: tests/corpus/check/method-self.i
---
schemes:
