tests/snapshots/check_corpus__snapshot_check_corpus@mutual-rec.i.snap
---
source: tests/check_corpus.rs
expression: "format!(\"{}\", typing)"
input_file: tests/corpus/check/mutual-rec.i
---
schemes:
  #0 : t4 -> t5
  #1 : t4 -> t5
