tests/snapshots/check_corpus__snapshot_check_corpus@operator-primitive.i.snap
---
source: tests/check_corpus.rs
expression: "i_lang::check::types::render_typing(&typing, &res)"
input_file: tests/corpus/check/operator-primitive.i
---
schemes:
  addInts : Int
  cmp : Bool
