tests/snapshots/check_corpus__snapshot_check_corpus@record-build-update.i.snap
---
source: tests/check_corpus.rs
expression: "i_lang::check::types::render_typing(&typing, &res)"
input_file: tests/corpus/check/record-build-update.i
---
schemes:
  origin : Point
  shifted : Point
