tests/snapshots/check_corpus__snapshot_check_corpus@sum-match.i.snap
---
source: tests/check_corpus.rs
expression: "i_lang::check::types::render_typing(&typing, &res)"
input_file: tests/corpus/check/sum-match.i
---
schemes:
  None : forall t0 . Maybe t0
  Some : forall t0 . t0 -> Maybe t0
  unwrap : Maybe Int -> Int
